--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "Julia",
   "license": "MIT",
-  "description": "",
   "dependencies": {
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/julia-anjos968/atividade-harry-potter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/julia-anjos968/atividade-harry-potter/issues"
+  },
+  "homepage": "https://github.com/julia-anjos968/atividade-harry-potter#readme",
+  "description": ""
 }
